# Car-prediction-price

./: REPORT.md  pyproject.toml
streamlit/: app.py  create_test_cut.py  model_utils.py  sample_upload.csv  train_model.py
streamlit/artifacts/: model_bundle.pkl
