[tool.poetry]
name = "ml-homework"
version = "0.1.0"
description = ""
authors = ["Yury <iness0chan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
ydata-profiling = "^4.18.0"
seaborn = "^0.13.0"
matplotlib = ">=3.5.0,<3.11.0"
numpy = ">=2.0.0"
pandas = ">=2.0.0"
setuptools = "*"
ipywidgets = "^8.1.8"
scikit-learn = "^1.7.2"
streamlit = "^1.36.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
